--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <audio autoplay loop>
-    <source src="./media/melody.mp3" type="audio/mp3">
-  </audio>
+  <audio src="./media/melody.mp3" autoplay loop></audio>
   <section>
     <p class="congratulation">С Днем Рождения, Анчуткен&#10084;
       Сейчас лето, но я решил, что такая анимация прекрасно поднимет настроение) Пусть в твоей душе всегда остается лето, глаза сверкают лучиками солнца, а улыбка ослепляет, ухмылка сжигает врагов))) Радуйся жизни и получай от нее лучшее. Чтобы твои родные оставались здоровыми и Марцепанчик дарил тебе счастье)
