--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <section>
-    <audio src="./media/melody.mp3" autoplay loop></audio>
+    
     <p class="congratulation">С Днем Рождения, Анчуткен&#10084;
-      Сейчас лето, но я решил, что такая анимация прекрасно поднимет настроение) Пусть в твоей душе всегда остается лето, глаза сверкают лучиками солнца, а улыбка ослепляет, ухмылка сжигает врагов))) Радуйся жизни и получай от нее лучшее. Чтобы твои родные оставались здоровыми и Марцепанчик дарил тебе счастье)
+      Сейчас лето, но я решил, что такая анимация прекрасно поднимет настроение) Пусть в твоей душе всегда остается лето, глаза сверкают лучиками солнца, а улыбка ослепляет, ухмылка сжигает врагов))) Радуйся жизни и получай от нее лучшее, чтобы твои родные оставались здоровыми и Марципанчик дарил тебе счастье)
       Андрей.</p>
     <div class="cat"><img src="./img/chblack3.png" alt="cat"></div>
     <div class="set">
@@ -44,5 +44,9 @@
       <div><img src="./img/leaf4.png" alt="leaves"></div>
     </div>
   </section>
+  <audio autoplay loop preload="auto">
+  <source src="./media/melody.mp3" type="audio/mp3">
+    <p>Your browser doesn't support HTML5 audio. Here is a <a href="./media/melody.mp3">link to the audio</a> instead.</p>
+  </audio>
 </body>
 </html>
